--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^25.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
